<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:text="Attendee Limit"
        app:layout_constraintBottom_toTopOf="@+id/buttonEventTime_CreateEventPage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextEventName_CreateEventPage"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/editTextEventLimit_CreateEventPage"
        style="@style/etSolidRoundedOutline"
        android:layout_width="120dp"
        android:layout_height="52dp"
        android:background="@drawable/rectangle_bg_white_a700_border_pink_500_radius_23_5"
        android:ellipsize="end"
        android:gravity="center_vertical"
        android:inputType="time"
        android:paddingStart="@dimen/_26pxh"
        android:paddingTop="@dimen/_11pxv"
        android:paddingEnd="@dimen/_30pxh"
        android:paddingBottom="@dimen/_10pxv"
        android:singleLine="true"
        android:textColorHint="@color/black_900_99"
        app:layout_constraintBottom_toTopOf="@+id/textView7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="Autofill" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonSave_CreateEventPage"
        style="@style/btnSolidRoundedOutline"
        android:layout_width="229dp"
        android:layout_height="wrap_content"
        android:layout_gravity="top|center"
        android:ellipsize="end"
        android:gravity="center"
        android:paddingStart="@dimen/_30pxh"
        android:paddingTop="@dimen/_8pxv"
        android:paddingEnd="@dimen/_30pxh"
        android:paddingBottom="@dimen/_8pxv"
        android:singleLine="true"
        android:text="Save"
        android:textAllCaps="false"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextEventLocation_CreateEventPage"
        app:layout_constraintVertical_bias="1.0"
        tools:text="Save" />

    <EditText
        android:id="@+id/editTextEventName_CreateEventPage"
        style="@style/etSolidRoundedOutline"
        android:layout_width="match_parent"
        android:layout_height="51dp"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="4dp"
        android:background="@drawable/rectangle_bg_white_a700_border_pink_500_radius_23_5"
        android:ellipsize="end"
        android:gravity="center_vertical"
        android:hint="Event Name"
        android:inputType="text"
        android:paddingStart="@dimen/_26pxh"
        android:paddingTop="@dimen/_11pxv"
        android:paddingEnd="@dimen/_30pxh"
        android:paddingBottom="@dimen/_10pxv"
        android:singleLine="true"
        android:textColorHint="@color/black_900_99"
        app:layout_constraintBottom_toTopOf="@+id/textView6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="Autofill" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonEventTime_CreateEventPage"
        style="@style/btnSolidRoundedOutline"
        android:layout_width="250dp"
        android:layout_height="52dp"
        android:layout_marginStart="4dp"
        android:background="@drawable/rectangle_bg_teal_a200_border_pink_500_radius_26"
        android:ellipsize="end"
        android:gravity="center_vertical"
        android:paddingStart="@dimen/_26pxh"
        android:paddingTop="@dimen/_11pxv"
        android:paddingEnd="@dimen/_30pxh"
        android:paddingBottom="@dimen/_10pxv"
        android:singleLine="true"
        android:text="Select Date"
        android:textAllCaps="false"
        android:textColor="@color/pink_500"
        android:textSize="17sp"
        app:layout_constraintBottom_toTopOf="@+id/textView7"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="Autofill"
        tools:text="Select Date" />

    <EditText
        android:id="@+id/editTextEventLocation_CreateEventPage"
        style="@style/etSolidRoundedOutline"
        android:layout_width="400dp"
        android:layout_height="51dp"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="4dp"
        android:background="@drawable/rectangle_bg_white_a700_border_pink_500_radius_23_5"
        android:ellipsize="end"
        android:gravity="center_vertical"
        android:hint="Location"
        android:inputType="text"
        android:paddingStart="@dimen/_26pxh"
        android:paddingTop="@dimen/_11pxv"
        android:paddingEnd="@dimen/_30pxh"
        android:paddingBottom="@dimen/_10pxv"
        android:singleLine="true"
        android:textColorHint="@color/black_900_99"
        app:layout_constraintBottom_toTopOf="@+id/buttonSave_CreateEventPage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.333"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="Autofill" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/editPosterButton_CreateEventPage"
        style="@style/btnSolidRoundedOutline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top|center"
        android:layout_marginEnd="4dp"
        android:ellipsize="end"
        android:gravity="center"
        android:paddingStart="@dimen/_30pxh"
        android:paddingTop="@dimen/_8pxv"
        android:paddingEnd="@dimen/_30pxh"
        android:paddingBottom="@dimen/_8pxv"
        android:singleLine="true"
        android:text="Edit Poster"
        android:textAllCaps="false"
        android:textSize="17sp"
        app:layout_constraintBottom_toTopOf="@+id/textView5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.889"
        app:layout_constraintStart_toEndOf="@+id/deletePosterButton_CreateEventPage"
        app:layout_constraintTop_toBottomOf="@+id/imageView_CreateEventPage"
        tools:text="Edit Image" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/deletePosterButton_CreateEventPage"
        style="@style/btnSolidRoundedOutline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top|center"
        android:layout_marginStart="4dp"
        android:ellipsize="end"
        android:gravity="center"
        android:paddingStart="@dimen/_30pxh"
        android:paddingTop="@dimen/_8pxv"
        android:paddingEnd="@dimen/_30pxh"
        android:paddingBottom="@dimen/_8pxv"
        android:singleLine="true"
        android:text="Delete Poster"
        android:textAllCaps="false"
        android:textSize="17sp"
        app:layout_constraintBottom_toTopOf="@+id/textView5"
        app:layout_constraintEnd_toStartOf="@+id/editPosterButton_CreateEventPage"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView_CreateEventPage"
        tools:text="Delete Poster" />

    <EditText
        android:id="@+id/editTextEventDescription_CreateEventPage"
        style="@style/etSolidRoundedOutline"
        android:layout_width="match_parent"
        android:layout_height="130dp"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="4dp"
        android:background="@drawable/rectangle_bg_white_a700_border_pink_500_radius_23_5"
        android:ellipsize="end"
        android:maxEms="25"
        android:hint="Event Description"
        android:inputType="text"
        android:paddingStart="@dimen/_26pxh"
        android:paddingTop="@dimen/_11pxv"
        android:paddingEnd="@dimen/_30pxh"
        android:paddingBottom="@dimen/_10pxv"
        android:singleLine="true"
        android:textColorHint="@color/black_900_99"
        app:layout_constraintBottom_toTopOf="@+id/textView8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="Autofill" />

    <FrameLayout
        android:id="@+id/buttonBack_CreateEventPage"
        style="@style/groupStyleteal_A200cornerRadius"
        android:layout_width="79dp"
        android:layout_height="44dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageArrowleft"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_25pxh"
            android:layout_gravity="top|start"
            android:layout_marginStart="@dimen/_26pxh"
            android:layout_marginTop="@dimen/_9pxv"
            android:layout_marginEnd="@dimen/_26pxh"
            android:layout_marginBottom="@dimen/_10pxv"
            android:scaleType="fitXY"
            android:src="@drawable/img_arrowleft"
            tools:ignore="ContentDescription"
            tools:src="@drawable/img_arrowleft" />
    </FrameLayout>

    <ImageView
        android:id="@+id/profilePicture"
        android:layout_width="@dimen/_153pxh"
        android:layout_height="@dimen/_112pxh"
        android:layout_gravity="top|end"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/img_ellipse1"
        tools:ignore="ContentDescription"
        tools:src="@drawable/img_ellipse1" />

    <ImageView
        android:id="@+id/imageEllipseTwo"
        android:layout_width="@dimen/_97pxh"
        android:layout_height="@dimen/_153pxh"
        android:layout_gravity="top|end"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/img_ellipse2"
        tools:ignore="ContentDescription"
        tools:src="@drawable/img_ellipse2" />

    <ImageView
        android:id="@+id/imageView_CreateEventPage"
        android:layout_width="365dp"
        android:layout_height="178dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonBack_CreateEventPage"
        app:layout_constraintBottom_toTopOf="@+id/editPosterButton_CreateEventPage"
        app:srcCompat="@drawable/sample_poster" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Event Name"
        app:layout_constraintBottom_toTopOf="@+id/editTextEventName_CreateEventPage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.045"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/deletePosterButton_CreateEventPage" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="Event Time"
        app:layout_constraintBottom_toTopOf="@+id/buttonEventTime_CreateEventPage"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextEventName_CreateEventPage"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Description"
        app:layout_constraintBottom_toTopOf="@+id/editTextEventDescription_CreateEventPage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.045"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonEventTime_CreateEventPage"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="Location"
        app:layout_constraintBottom_toTopOf="@+id/editTextEventLocation_CreateEventPage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.045"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextEventDescription_CreateEventPage"
        app:layout_constraintVertical_bias="0.571" />

</androidx.constraintlayout.widget.ConstraintLayout>