<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/editTextPhoneNumber"
        style="@style/etSolidRoundedOutline"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/rectangle_bg_white_a700_border_pink_500_radius_23_5"
        android:ellipsize="end"
        android:hint="@string/msg_your_contact_in"
        android:inputType="phone"
        android:paddingStart="@dimen/_26pxh"
        android:paddingTop="@dimen/_11pxv"
        android:paddingEnd="@dimen/_30pxh"
        android:paddingBottom="@dimen/_10pxv"
        android:singleLine="true"
        android:textColorHint="@color/black_900_99"
        app:layout_constraintBottom_toTopOf="@+id/frameStackundrawwallpos"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editHomePage"
        tools:ignore="Autofill" />

    <EditText
        android:id="@+id/editHomePage"
        style="@style/etSolidRoundedOutline"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/rectangle_bg_white_a700_border_pink_500_radius_23_5"
        android:ellipsize="end"
        android:hint="@string/lbl_your_homepage"
        android:inputType="text"
        android:paddingStart="@dimen/_24pxh"
        android:paddingTop="@dimen/_11pxv"
        android:paddingEnd="@dimen/_30pxh"
        android:paddingBottom="@dimen/_10pxv"
        android:singleLine="true"
        android:textColorHint="@color/black_900_99"
        app:layout_constraintBottom_toTopOf="@+id/editTextPhoneNumber"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextName"
        tools:ignore="Autofill" />

    <EditText
        android:id="@+id/editTextName"
        style="@style/etSolidRoundedOutline"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/rectangle_bg_white_a700_border_pink_500_radius_23_5"
        android:ellipsize="end"
        android:hint="@string/lbl_your_name"
        android:inputType="text"
        android:paddingStart="@dimen/_26pxh"
        android:paddingTop="@dimen/_11pxv"
        android:paddingEnd="@dimen/_30pxh"
        android:paddingBottom="@dimen/_10pxv"
        android:singleLine="true"
        android:textColorHint="@color/black_900_99"
        app:layout_constraintBottom_toTopOf="@+id/editHomePage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editImageButton"
        tools:ignore="Autofill" />

    <LinearLayout
        android:id="@+id/linearRowgearone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/linearRowarrowleft"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.86"
            android:orientation="horizontal">

            <FrameLayout
                android:id="@+id/buttonBack_EditProfilePage"
                style="@style/groupStyleteal_A200cornerRadius"
                android:layout_width="@dimen/_82pxh"
                android:layout_height="@dimen/_51pxv"
                android:layout_marginBottom="@dimen/_108pxv">

                <ImageView
                    android:id="@+id/imageArrowleft"
                    android:layout_width="@dimen/_23pxh"
                    android:layout_height="@dimen/_25pxh"
                    android:layout_gravity="top|start"
                    android:layout_marginStart="@dimen/_26pxh"
                    android:layout_marginTop="@dimen/_9pxv"
                    android:layout_marginEnd="@dimen/_26pxh"
                    android:layout_marginBottom="@dimen/_10pxv"
                    android:scaleType="fitXY"
                    android:src="@drawable/img_arrowleft"
                    tools:ignore="ContentDescription"
                    tools:src="@drawable/img_arrowleft" />
            </FrameLayout>

            <ImageView
                android:id="@+id/profilePicture"
                android:layout_width="@dimen/_124pxh"
                android:layout_height="@dimen/_124pxh"
                android:layout_marginStart="@dimen/_36pxh"
                android:layout_marginTop="@dimen/_35pxv"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/img_ellipse1_124x124"
                tools:ignore="ContentDescription"
                tools:src="@drawable/img_ellipse1_124x124" />
        </LinearLayout>

    </LinearLayout>

    <FrameLayout
        android:id="@+id/frameStackundrawwallpos"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_160pxv"
        android:gravity="start"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <FrameLayout
            android:id="@+id/buttonBackToHomepage"
            android:layout_width="@dimen/_89pxh"
            android:layout_height="@dimen/_90pxv"
            android:layout_gravity="bottom|start"
            android:layout_marginTop="@dimen/_10pxv"
            android:layout_marginEnd="@dimen/_10pxh">

            <ImageView
                android:id="@+id/imageLogo"
                android:layout_width="@dimen/_89pxh"
                android:layout_height="@dimen/_90pxh"
                android:layout_gravity="start"
                android:scaleType="fitXY"
                app:srcCompat="@drawable/img_result1"
                tools:ignore="ContentDescription"
                tools:src="@drawable/img_result1" />

        </FrameLayout>

        <ImageView
            android:id="@+id/imageUndrawwallpos"
            android:layout_width="@dimen/_139pxh"
            android:layout_height="@dimen/_105pxh"
            android:layout_gravity="top|end"
            android:layout_marginStart="@dimen/_10pxh"
            android:layout_marginBottom="@dimen/_10pxv"
            android:scaleType="fitXY"
            app:srcCompat="@drawable/img_undrawwallpos"
            tools:ignore="ContentDescription"
            tools:src="@drawable/img_undrawwallpos" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonSave"
            style="@style/btnSolidRoundedOutline"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top|center"
            android:layout_marginStart="@dimen/_85pxh"
            android:layout_marginTop="@dimen/_33pxv"
            android:layout_marginEnd="@dimen/_85pxh"
            android:layout_marginBottom="@dimen/_33pxv"
            android:ellipsize="end"
            android:gravity="center"
            android:paddingStart="@dimen/_30pxh"
            android:paddingTop="@dimen/_8pxv"
            android:paddingEnd="@dimen/_30pxh"
            android:paddingBottom="@dimen/_8pxv"
            android:singleLine="true"
            android:text="Save"
            android:textAllCaps="false"
            tools:text="Save" />

    </FrameLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/deleteImageButton"
        style="@style/btnSolidRoundedOutline"
        android:layout_width="180dp"
        android:layout_height="52dp"
        android:layout_gravity="top|center"
        android:layout_marginStart="8dp"
        android:layout_marginTop="3dp"
        android:ellipsize="end"
        android:gravity="center"
        android:paddingStart="@dimen/_30pxh"
        android:paddingTop="@dimen/_8pxv"
        android:paddingEnd="@dimen/_30pxh"
        android:paddingBottom="@dimen/_8pxv"
        android:singleLine="true"
        android:text="Delete Image"
        android:textAllCaps="false"
        android:textSize="17sp"
        app:layout_constraintEnd_toStartOf="@+id/editImageButton"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearRowgearone"
        tools:text="Delete Image" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/editImageButton"
        style="@style/btnSolidRoundedOutline"
        android:layout_width="180dp"
        android:layout_height="50dp"
        android:layout_gravity="top|center"
        android:layout_marginTop="3dp"
        android:layout_marginEnd="8dp"
        android:ellipsize="end"
        android:gravity="center"
        android:paddingStart="@dimen/_30pxh"
        android:paddingTop="@dimen/_8pxv"
        android:paddingEnd="@dimen/_30pxh"
        android:paddingBottom="@dimen/_8pxv"
        android:singleLine="true"
        android:text="Edit Image"
        android:textAllCaps="false"
        android:textSize="17sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearRowgearone"
        tools:text="Edit Image" />
</androidx.constraintlayout.widget.ConstraintLayout>